# shizuku-finder

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  scheduled-scan.yml
data/: ignore_rules.yaml
docs/: change-requests.md  feature-backlog.md  migration-plan.md  roadmap.md
src/shizuku_finder/: cli.py  config.py  diffing.py  filtering.py  ignore_rules.py  models.py  normalization.py  orchestrator.py  pipeline.py  readme_index.py  repo_cache.py  reporting.py  run_summary.py  scoring.py  storage.py
src/shizuku_finder/clients/: __init__.py  github_client.py  http_client.py
src/shizuku_finder/scanners/: __init__.py  base.py  bitbucket.py  codeberg.py  fdroid.py  github_code.py  github_meta.py  gitlab.py
tests/: test_bitbucket_scanner.py  test_cli.py  test_cli_end_to_end.py  test_clients.py  test_codeberg_scanner.py  test_diffing.py  test_fdroid_scanner.py  test_gitlab_scanner.py  test_ignore_rules.py  test_normalization.py  test_orchestrator.py  test_orchestrator_failures.py  test_pipeline.py  test_readme_index.py  test_repo_cache.py  test_reporting.py  test_run_summary.py  test_scoring.py  test_storage.py  test_workflows.py
tests/fixtures/: bitbucket_repos.json  codeberg_repos.json  fdroid_index.xml  gitlab_projects.json
