[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shizuku-finder"
version = "0.1.0"
description = "Shizuku discovery crawler and report pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Mankeluvsit"}]
dependencies = [
  "httpx>=0.27,<0.29",
  "PyGithub>=2.3,<3",
  "GitPython>=3.1.45,<4",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<6",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
shizuku-finder = "shizuku_finder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
